# pinaka_agents

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  MEMORY.md  Pinaka_AI_Implementation.docx  README.md  RETRO.md  REVIEW.md  TODO.md  TODOS.md  business_details.md  feedback_shipping_style.md  feedback_testing.md  nixpacks.toml  package-lock.json  package.json  project_state.md  pyproject.toml  railway.json  railway.toml  reference_cronjob.md  reference_meta_api.md  shopify.app.toml  user_profile.md
.github/workflows/: tests.yml
catalog/: catalog.json
data/products/: diamond-tennis-bracelet-lab.json
deploy/: DEPLOY.md  railway-crons.json
docs/: google_ads_api_design_doc.md  google_ads_api_design_doc.rtf
extensions/thankyou-survey/: package.json  shopify.d.ts  shopify.extension.toml
pinaka-custom/: .gitignore
pinaka-custom/assets/: pinaka-custom.css
pinaka-custom/layout/: theme.liquid
pinaka-custom/sections/: pinaka-craft-timeline.liquid  pinaka-founder-note.liquid  pinaka-hero.liquid  pinaka-trust-badges.liquid
pinaka-custom/snippets/: theme-toggle.liquid
scripts/: backfill_shopify_products.py  create_sendgrid_lifecycle_templates.py  google_ads_auth.py  meta_ads_optimize_for_atc.py  pinterest_oauth.py  register_shipstation_webhooks.py  register_webhooks.py  run_crons.sh  setup_shopify_blog.py
shopify-theme/: order-status-additional-scripts.html
shopify-theme/assets/: pinaka-custom.css
shopify-theme/config/: settings_data.json  settings_schema.json
shopify-theme/layout/: theme.liquid
shopify-theme/sections/: footer-group.json  (+6 more)
(+160 files in other folders)
