[project]
name = "pinaka-agents"
version = "0.1.0"
description = "AI-powered e-commerce agents for Pinaka Jewellery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.39.0",
    "supabase>=2.9.0",
    "slack-sdk>=3.33.0",
    "aiohttp>=3.9.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "python-multipart>=0.0.12",
    "sendgrid>=6.11.0",
    "chromadb>=0.5.0",
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "google-ads>=25.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
